<resources>
    <string name="app_name">LifeCycle</string>
    <string name="reset_but">CE</string>
    <string name="reset_ses_but">C</string>
    <string name="bs_but">BS</string>
    <string name="but_0">0</string>
    <string name="but_1">1</string>
    <string name="but_2">2</string>
    <string name="but_3">3</string>
    <string name="but_4">4</string>
    <string name="but_5">5</string>
    <string name="but_6">6</string>
    <string name="but_7">7</string>
    <string name="but_8">8</string>
    <string name="but_9">9</string>
    <string name="div_but">/</string>
    <string name="mul_but">x</string>
    <string name="sub_but">-</string>
    <string name="add_but">+</string>
    <string name="dot_but">.</string>
    <string name="eq_but">=</string>
    <string name="sign_but">+/-</string>
    <string name="app_icon">redSun_icon</string>
    <string name="empty" />
    <string name="error">Cannot divide by 0</string>
</resources>